add fetchTeamCompetition route with docs
